# grpc_network_gateway

./: .env.example  Cargo.toml  README.md  build.rs  compose.yaml  init.sh
migrations/: 01_init_routing_table.sql
proto/: gateway.proto
src/: main.rs
src/network/: router.rs
src/services/: gateway.rs
